feat(async-ai): add Witch async AI optimization (monitoring only)
Witch optimization (Goal system, computation only):
- WitchSnapshot: health + effects + nearby players
- WitchCpuCalculator: potion recipe matching + attack target filtering
- WitchDiff: Computation results (no writeback - Goal system)
- WitchBrainMixin: Scheduler (3 tick interval)

Configuration:
- witch-optimization.enabled: false (default)
- witch-optimization.scan-distance: 16

Note: Witches use Goal system (not Brain), so writeback not implemented.
Current implementation provides CPU load for thread pool utilization testing.

Expected effect (30 witches):
- Thread pool CPU utilization increase
- No behavior changes (vanilla Goal system intact)
- MSPT monitoring for Goal-based entities

Total modules: 20 (19 + Witch monitoring)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -76,6 +76,14 @@ async-ai:
     look-distance: 16  # 注视距离（格）
     barter-distance: 16  # 交易距离（格，蛮兵也检测）
   
+  # 女巫优化 (Witch)
+  # 女巫：药水配方+效果检测+攻击目标筛选，CPU密集
+  # 30只女巫 = 27-33 ms MSPT → 直接吃掉1.5个TPS
+  witch-optimization:
+    enabled: false  # 默认关闭
+    use-poi-snapshot: false  # 女巫不依赖POI
+    scan-distance: 16  # 扫描距离（格）
+  
   # 其他生物优化 (简单AI实体)
   # 僵尸、骷髅、苦力怕等不依赖POI的生物
   simple-entities:
