--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@ org.gradle.jvmargs=-Xmx6G
 org.gradle.caching=true
 org.gradle.parallel=true
 systemProp.idea.auto.run.tasks=applyAccessWideners
+paperweight-mappings-namespace=mojang
